--- a/MyProject/Debug/makefile
+++ b/MyProject/Debug/makefile
@@ -24,24 +24,24 @@ endif
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-MyProject.elf \
+NUCLEO-F411RE.elf \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-MyProject.list \
+NUCLEO-F411RE.list \
 
 OBJCOPY_BIN += \
-MyProject.bin \
+NUCLEO-F411RE.bin \
 
 
 # All Target
-all: MyProject.elf secondary-outputs
+all: NUCLEO-F411RE.elf secondary-outputs
 
 # Tool invocations
-MyProject.elf: $(OBJS) $(USER_OBJS) C:\Users\ADMIN\Documents\GitHub\MyProject\MyProject\STM32F411RETX_FLASH.ld
-	arm-none-eabi-gcc -o "MyProject.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\ADMIN\Documents\GitHub\MyProject\MyProject\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MyProject.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
+NUCLEO-F411RE.elf: $(OBJS) $(USER_OBJS) C:\Users\ADMIN\Documents\GitHub\NUCLEO-F411RE\MyProject\STM32F411RETX_FLASH.ld
+	arm-none-eabi-gcc -o "NUCLEO-F411RE.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\ADMIN\Documents\GitHub\NUCLEO-F411RE\MyProject\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="NUCLEO-F411RE.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -50,13 +50,13 @@ default.size.stdout: $(EXECUTABLES)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-MyProject.list: $(EXECUTABLES)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "MyProject.list"
+NUCLEO-F411RE.list: $(EXECUTABLES)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "NUCLEO-F411RE.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-MyProject.bin: $(EXECUTABLES)
-	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "MyProject.bin"
+NUCLEO-F411RE.bin: $(EXECUTABLES)
+	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "NUCLEO-F411RE.bin"
 	@echo 'Finished building: $@'
 	@echo ' '
 
